voy por la maqueta

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     </title>
 </head>
 <body>
-    <div>
-        <h1>hola mundo Loremre andis.</h1>
-        <h5>hola tulio hahahahahaha</h5>
-        <h6>hola mundo</h6>
-    </div>
-
-
-    <h4>Cosas que solo impirta en la vida </h4>
     
+
+<header class="header"> HEADER</header>
+<nav class="navbar">NAVBAR</nav>
+<aside class="sidebar">SIDEBAR</aside>
+<footer class="footer">FOOTER</footer>
+
+
 </body>
 </html>
 
