--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Toyota</title>
 </head>
-<body>
+<body class="grid-container">
     
 
 <header class="header"> HEADER</header>
