--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <header class="header"> HEADER</header>
 <nav class="navbar">NAVBAR</nav>
 <aside class="sidebar">SIDEBAR</aside>
+<article class="main">MAIN</article>
 <footer class="footer">FOOTER</footer>
 
-<h4>hola </h4>
+
 
 
 </body>
