Titulo y pie de pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Toyota</title>
 </head>
 <body class="grid-container">
-<header class="header"> HEADER</header>
+<header class="header"> CONCESIONARIO DE CARROS TOYOTA</header>
 <nav class="navbar">NAVBAR</nav>
 <aside class="sidebar">SIDEBAR</aside>
 <article class="main">MAIN
@@ -47,7 +47,10 @@
         </button>
       </div>
 </article>
-<footer class="footer">FOOTER</footer>
+<footer class="footer">LOS MEJORES AUTOS LOS PUEDES CONSEGUIR EN ESTE CONCESIONARIO <br>
+    CONTACTANOS 3042484666 - 3136708763 <br>
+    RIOHACHA-LA GUAJIRA 
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
