--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="img/R4.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/R5.jpg" class="d-block w-100" alt="...">
+            <img src="img/R5.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="img/R6.jpg" class="d-block w-100" alt="...">
