titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Toyota</title>
 </head>
 <body class="grid-container">
-<header class="header"> CONCESIONARIO DE CARROS TOYOTA</header>
+<header class="header"> CONCESIONARIO DE CARROS</header>
 <nav class="navbar">NAVBAR</nav>
 <aside class="sidebar">SIDEBAR</aside>
 <article class="main">MAIN
@@ -47,9 +47,7 @@
         </button>
       </div>
 </article>
-<footer class="footer">LOS MEJORES AUTOS LOS PUEDES CONSEGUIR EN ESTE CONCESIONARIO <br>
-    CONTACTANOS 3042484666 - 3136708763 <br>
-    RIOHACHA-LA GUAJIRA 
+<footer class="footer">LOS MEJORES AUTOS LOS PUEDES CONSEGUIR EN ESTE CONCESIONARIO <br> CONTACTANOS 3042484666 - 3136708763 <br> RIOHACHA-LA GUAJIRA 
 </footer>
 
 
