--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
-    <title>Toyota</title>
+    <title>CONCECIONARIO DE CARROS DEPORTIVO</title>
 </head>
 <body class="grid-container">
-<header class="header"> CONCESIONARIO DE CARROS</header>
+<header class="header"> CONCESIONARIO DE CARROS DEPORTIVOS</header>
 <nav class="navbar">NAVBAR</nav>
 <aside class="sidebar">SIDEBAR</aside>
 <article class="main">MAIN
