menu de navegacion

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <title>LAMBORGHINI</title>
 </head>
 <body class="grid-container">
-<header class="header"> AUTOS DEPORTIVOS LAMBORGHINI</header>
-<nav class="navbar">NAVBAR</nav>
+<header class="header"> AUTOS DEPORTIVOS LAMBORGHINI </header>
+<nav class="navbar">NAVBAR
+    <ul class="menu">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Productos</a></li>
+        <li><a href="#">Servicios de ventas</a></li>
+        <li><a href="#">Acerca De Autos</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
+</nav>
 <aside class="sidebar">SIDEBAR</aside>
 <article class="main">MAIN
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
